--- a/jellyfin-server/config.yaml
+++ b/jellyfin-server/config.yaml
@@ -1,6 +1,6 @@
-name: Jellyfin Server
+name: Jellyfin Server (Croydon's Fork)
 version: 1.4.6
-slug: jellyfinserver
+slug: jellyfinserver-croydons-fork
 description: Jellyfin Server add-on
 url: https://github.com/mdvorak/ha-addon-jellyfin
 webui: http://[HOST]:[PORT:8096]
