--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
 name: Jellyfin Server add-on repository
-url: "https://github.com/mdvorak/ha-addon-jellyfin"
-maintainer: Michal Dvorak <mikee2185@gmail.com>
+url: "https://github.com/Croydon/ha-addon-jellyfin"
+maintainer: Croydon <git@cr0ydon.com>
